--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--Main-->
+    <!--LanguageSelection-->
     <string name="app_name">FunSpeak</string>
+    <string name="welcome">¡Bienvenido!</string>
+    <string name="select">Selecciona el lenguage a aprender</string>
+    <string name="start">Empezemos</string>
+    <string name="exit">Salir</string>
     <string-array name="languages">
         <item>Ingles</item>
         <item>Español</item>
     </string-array>
+    <!--Main-->
     <string name="animals">Animales</string>
     <string name="food">Comida</string>
     <string name="verbs">Verbos</string>
+    <string name="synonyms">Sinonimos</string>
+    <string name="back">Atras</string>
     <!--SelectThePhotoTask-->
     <string name="select_photo">Selecciona la imagen correcta</string>
     <!--CompleteThePhrase-->
     <string name="complete_phrase">Completa la frase</string>
     <!--FinalScore-->
     <string name="final_score">Tu puntuacion fue:</string>
-    <string name="back">Regresar a la pantalla principal</string>
+    <string name="back_to_main">Regresar a la pantalla principal</string>
 </resources>
