--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="hard">Hard</string>
 
     <!--Login Register -->
-    <string name="email_hint">Correo: example@funspeak.com</string>
+    <string name="email_hint">Email: example@funspeak.com</string>
     <string name="pass_hint">Password</string>
     <string name="name_hint">Name</string>
     <string name="address_hint">Address</string>
